--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					</li>
 					<li>
 						<a
-							href="https://arish-shah.github.io/internship-2019/blog"
+							href="https://arish-shah.github.io/internship-2019/gif"
 							target="_blank"
 						>
 							GIF Search
