--- a/gif/index.html
+++ b/gif/index.html
@@ -21,6 +21,14 @@
 				const q = event.target[0].value.trim();
 				window.location = `search.html#${q}`;
 			}
+
+			let vh = window.innerHeight * 0.01;
+			document.documentElement.style.setProperty('--vh', `${vh}px`);
+
+			window.addEventListener('resize', () => {
+				let vh = window.innerHeight * 0.01;
+				document.documentElement.style.setProperty('--vh', `${vh}px`);
+			});
 		</script>
 	</body>
 </html>
