--- a/gif/search.html
+++ b/gif/search.html
@@ -13,7 +13,7 @@
 				<div class="container">
 					<h3><a href="index.html">GIF Search</a></h3>
 					<form onsubmit="handleSubmit(event)">
-						<input type="text" autofocus />
+						<input type="text" />
 						<button type="submit">🔎</button>
 					</form>
 				</div>
