Added extending slide

--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
 			</section>
 
 			<section>
+				<h2 class="secondary">Extending the Web</h2>
+				<ul class="appear">
+					<li>Web Components, Shadow Root</li>
+					<li>Progressive Web Applications (PWA)</li>
+					<li>WebAssembly</li>
+				</ul>
+			</section>
+
+			<section>
 				<h2 class="secondary">Thank You</h2>
 			</section>
 		</div>
